# luminance-rs

./: Cargo.toml  NEXT.md  README.md  luminance-examples-desktop.trace
.github/: dependabot.yml
.github/workflows/: ci.yaml
.mind/: state.json
.mind/data/: 20220818172519-303: segfault in Drop.md
docs/: design.md  renaming.md  strongly_typed_color_slots.md
examples/01-hello-world/src/: fs.glsl  vs.glsl
examples/common/: Cargo.toml  README.md
examples/common/src/: attributeless.rs  displacement_map.rs  dynamic_uniform_interface.rs  funtest_360_manually_drop_framebuffer.rs  funtest_483_indices_mut_corruption.rs  funtest_gl33_f64_uniform.rs  funtest_pixel_array_encoding.rs  funtest_scissor_test.rs  hello_world.rs  hello_world_more.rs  interactive_triangle.rs  lib.rs  mrt.rs  offscreen.rs  polymorphic_hello_world.rs  query_info.rs  query_texture_texels.rs  render_state.rs  shader_uniforms.rs  shared.rs  skybox.rs  sliced_tess.rs  sliced_vertex_entity.rs  stencil.rs  texture.rs  uni_buffer.rs  vertex_instancing.rs
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs
examples/web/: Cargo.toml
examples/web/src/: lib.rs
luminance/: CHANGELOG.md  Cargo.toml
luminance-derive/: CHANGELOG.md  Cargo.toml
luminance-derive/src/: attrib.rs  lib.rs  memory_layout.rs  render_slots.rs  semantics.rs  uniform_interface.rs  uniforms.rs  vertex.rs
luminance-examples/: Cargo.toml
luminance-examples-web/: lel.rs
luminance-examples-web/shaders/: simple-vs.glsl
luminance-examples-web/src/: lib.rs
luminance-examples/src/: attributeless.rs  displacement-map.rs  dynamic-uniform-interface.rs  hello-world-glutin.rs  hello-world.rs  multiple-targets.rs  offscreen.rs  query-texture-texels.rs  render-state.rs  shader-uniforms-adapt.rs  shader-uniforms.rs  skybox.rs  sliced-tess.rs  texture.rs  vertex-instancing.rs
luminance-front/: CHANGELOG.md  Cargo.toml
luminance-front/src/: tess.rs
luminance-gl/: CHANGELOG.md  Cargo.toml
luminance-gl/src/: buffer.rs  framebuffer.rs  lib.rs  pixel.rs  state.rs  tess.rs  texture.rs
luminance-gl/src/gl33/: buffer.rs  framebuffer.rs  pipeline.rs  shader.rs  tess.rs  texture.rs
luminance-gl/src/shader/: program.rs  stage.rs
luminance-gl2/: Cargo.toml
luminance-gl2/src/: gl33.rs  lib.rs  log.rs
luminance-glfw/: CHANGELOG.md  Cargo.toml
luminance-glfw/src/: lib.rs  surface.rs
luminance-glutin/: CHANGELOG.md  Cargo.toml
luminance-glutin/src/: lib.rs
luminance-sdl2/: CHANGELOG.md  Cargo.toml  README.md
luminance-std140/: CHANGELOG.md  Cargo.toml
luminance-web-sys/: CHANGELOG.md  Cargo.toml
luminance-web-sys/src/: lib.rs
luminance-webgl/: CHANGELOG.md  Cargo.toml
luminance-webgl/src/webgl2/: array_buffer.rs  buffer.rs  framebuffer.rs  pipeline.rs  shader.rs  state.rs  tess.rs  texture.rs
luminance-windowing/src/: lib.rs
luminance/examples/: 01-hello-world-glutin.rs  01-hello-world.rs  02-render-state.rs  03-sliced-tess.rs  04-shader-uniforms.rs  05-attributeless.rs  06-texture.rs  07-offscreen.rs  08-shader-uniforms-adapt.rs  09-dynamic-uniform-interface.rs  10-vertex-instancing.rs  11-query-texture-texels.rs  12-displacement-map.rs
luminance/src/: backend.rs  blending.rs  buffer.rs  context.rs  depth_stencil.rs  dim.rs  face_culling.rs  framebuffer.rs  has_field.rs  lib.rs  named_index.rs  pipeline.rs  pixel.rs  primitive.rs  render_channel.rs  render_slots.rs  render_state.rs  scissor.rs  shader.rs  shading_gate.rs  state.rs  tess.rs  tess_gate.rs  texture.rs  vertex.rs  vertex_entity.rs  vertex_storage.rs
luminance/src/backend/: color_slot.rs  depth_slot.rs  depth_stencil_slot.rs  framebuffer.rs  shader.rs  state.rs  tess.rs  tess_gate.rs  vertex_entity.rs
luminance/src/shader/: program.rs  program2.rs  stage.rs
luminance/tests/: derive_memory_layout.rs  derive_render_slots.rs  uniform_interface.rs  vertex.rs
scripts/: rollout
src/shader/: program.rs  stage.rs
