[package]
name = "luminance-gl2"
version = "0.20.0-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "OpenGL backends for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "opengl"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-gl"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["GL33"]
GL33 = []
# OpenGL extensions
GL_ARB_gpu_shader_fp64 = []

[dependencies]
gl = "0.14"
luminance = { version = "0.48.0-dev", path = "../luminance" }
# luminance-std140 = { version = "0.2", path = "../luminance-std140" }
mint = { version = "0.5.9", optional = true }
