[package]
name = "luminance"
version = "0.48.0-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["luminance-derive"]

[dependencies]
log = { version = "0.4.17", optional = true }
luminance-derive = { version = "0.11.0-dev", path = "../luminance-derive", optional = true }
mint = { version = "0.5.9", optional = true }

[dev-dependencies]
mint = "0.5.9"
